; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_values.c_debug_show_type.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_values.c_debug_show_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"unknown\00", align 1
@GHB_STRING = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [7 x i8] c"string\00", align 1
@GHB_INT = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [4 x i8] c"int\00", align 1
@GHB_DOUBLE = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [7 x i8] c"double\00", align 1
@GHB_BOOL = common dso_local global i64 0, align 8
@.str.4 = private unnamed_addr constant [5 x i8] c"bool\00", align 1
@GHB_ARRAY = common dso_local global i64 0, align 8
@.str.5 = private unnamed_addr constant [6 x i8] c"array\00", align 1
@GHB_DICT = common dso_local global i64 0, align 8
@.str.6 = private unnamed_addr constant [5 x i8] c"dict\00", align 1
@.str.7 = private unnamed_addr constant [8 x i8] c"Type %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @debug_show_type(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  store i64 %0, i64* %2, align 8
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  %4 = load i64, i64* %2, align 8
  %5 = load i64, i64* @GHB_STRING, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8** %3, align 8
  br label %38

8:                                                ; preds = %1
  %9 = load i64, i64* %2, align 8
  %10 = load i64, i64* @GHB_INT, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %8
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i8** %3, align 8
  br label %37

13:                                               ; preds = %8
  %14 = load i64, i64* %2, align 8
  %15 = load i64, i64* @GHB_DOUBLE, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %13
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0), i8** %3, align 8
  br label %36

18:                                               ; preds = %13
  %19 = load i64, i64* %2, align 8
  %20 = load i64, i64* @GHB_BOOL, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %18
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0), i8** %3, align 8
  br label %35

23:                                               ; preds = %18
  %24 = load i64, i64* %2, align 8
  %25 = load i64, i64* @GHB_ARRAY, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %23
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.5, i64 0, i64 0), i8** %3, align 8
  br label %34

28:                                               ; preds = %23
  %29 = load i64, i64* %2, align 8
  %30 = load i64, i64* @GHB_DICT, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %33

32:                                               ; preds = %28
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.6, i64 0, i64 0), i8** %3, align 8
  br label %33

33:                                               ; preds = %32, %28
  br label %34

34:                                               ; preds = %33, %27
  br label %35

35:                                               ; preds = %34, %22
  br label %36

36:                                               ; preds = %35, %17
  br label %37

37:                                               ; preds = %36, %12
  br label %38

38:                                               ; preds = %37, %7
  %39 = load i8*, i8** %3, align 8
  %40 = call i32 @g_debug(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.7, i64 0, i64 0), i8* %39)
  ret void
}

declare dso_local i32 @g_debug(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
